--- a/portfolio/assignment-5/css/style.css
+++ b/portfolio/assignment-5/css/style.css
@@ -42,39 +42,51 @@ body {
 #hidden-content{
     display: flex;
     flex-direction: column;
+    align-items: center;
     gap: 2rem;
 
-    max-width: 15rem;
     margin: 0 auto;
 }
 
 .content-container{
     margin-top: 2rem;
 
-    max-width: 20rem;
+    max-width: 100%;
     width: 100%;
+    gap: 1rem;
 
     display: flex;
     flex-direction: column;
-    gap: 2rem;
+    align-items: center;
 
 }
 
 
 .content-container button{
     height: 4rem;
-    width: 100%;
+    width: 50%;
 }
 
 /* CSS for images within hidden content */
 .content-container figure{
-    background-color: green;
-    padding: 0.2rem;
+    background-color: lightgoldenrodyellow;
     margin: 0 auto;
+    max-width: 80%;
+    width: 100%;
+
+    display: flex;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+
+    padding: 0.5rem 0 0.5rem 0;
 }
+
 
 #arcade-container{
 
+}
+#arcade-images img{
+    max-width: 80%;
 }
 #audio-container{
 
