--- a/portfolio/assignment-5/css/style.css
+++ b/portfolio/assignment-5/css/style.css
@@ -1,3 +1,9 @@
+@font-face {
+    font-family: "Alex Brush Regular";
+    src: url(../alex-brush/AlexBrush-Regular.ttf);
+}
+
+
 /* Basic CSS resets -- leveling slight inconsistencies in browsers */
 html, body {
 	margin:0px;
@@ -35,6 +41,7 @@ header{
 }
 header h1{
     font-size: 3rem;
+    font-family: "Alex Brush Regular";
 }   
 header h2{
 }
@@ -219,6 +226,9 @@ You can adjust the min-width numbers below, and add as many new media queries as
 
 /* Minimum width for desktop screens. */
 @media all and (min-width: 1024px) {
+    header h1{
+        font-size: 5rem;
+    }
 	#banner img{
         max-width: 100%;
     }
