--- a/portfolio/assignment-6/css/style.css
+++ b/portfolio/assignment-6/css/style.css
@@ -47,7 +47,9 @@ header h2{
 }
 
 #image-1,#image-2,#image-3{
-    height: 700px;
+    height: 600px;
+    max-width: 100%;
+    width: 100%;
 
 }
 #image-1{
