--- a/portfolio/final-project/interview-1/css/style.css
+++ b/portfolio/final-project/interview-1/css/style.css
@@ -17,7 +17,8 @@ html {
 /* Mobile First CSS: we'll design for phone sizes first, then add media queries for tablets and desktop computers later */
 
 body {
-    background-color: dimgrey;
+    background: url(../img/daniel-george-background.png) repeat fixed center;
+    background-color: darkslategray;
 }
 
 
