--- a/portfolio/final-project/interview-3/css/style.css
+++ b/portfolio/final-project/interview-3/css/style.css
@@ -17,7 +17,7 @@ html {
 /* Mobile First CSS: we'll design for phone sizes first, then add media queries for tablets and desktop computers later */
 
 body {
-    background: url(../img/optimo-background.png) repeat fixed center;
+    background: url(../img/montopoli-background.png) repeat fixed center;
     background-color: darkslategray;
 }
 
