--- a/portfolio/final-project/interview-3/css/style.css
+++ b/portfolio/final-project/interview-3/css/style.css
@@ -143,7 +143,7 @@ hr {
 }
 
 .question-section img{
-    background-color: gray;
+    background-color: #808080;
 
     border-bottom: 0.5rem solid black;
 
