--- a/portfolio/final-project/css/style.css
+++ b/portfolio/final-project/css/style.css
@@ -34,7 +34,7 @@ header{
 }
 
 /* Intro section */
-#intro-section{
+.info-box-section{
     background-color: gainsboro;
     border: solid 1rem gray;
     max-width: 80%;
@@ -57,31 +57,43 @@ header{
 /* Interviews Section */
 
 #interview-section{
-    background-color: darkgray;
-    margin: 0 auto;
+    background-color: slategray;
 
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 .interview-figure{
-    background-color: black;
+
+    margin: 6rem 0;
+
+    max-width: 90%;
+    width: 100%;
+    padding: 1rem;
+}
+.interview-figure a{
+    border: solid 1rem black;
+    background-color: beige;
+    text-decoration: none;
 
     display: flex;
     flex-direction: column;
-    margin: 3rem;
+    align-items: center;
 }
 .interview-figure img{
-    margin: 1rem;
+    width: 100%;
 }
 .interview-figure p{
+    width: 100%;
     text-align: center;
     font-size: 2rem;
+    color: black;
+    background-color: gray;
+    border-top: 1rem solid black;
 
-    background-color: red;
-    margin: 0 1rem 1rem 1rem;
-    padding: 1rem;
+    padding: 1rem 0;
 
+    margin: 0;
 }
 
 #container {
