--- a/portfolio/final-project/css/style.css
+++ b/portfolio/final-project/css/style.css
@@ -119,9 +119,6 @@ header{
     background-repeat: no-repeat;
     background-size: cover;
 }
-.interview-figure img{
-    width: 100%;
-}
 .interview-figure p{
     width: 100%;
     text-align: center;
@@ -129,9 +126,7 @@ header{
     color: black;
     background-color: gray;
     border-top: 1rem solid black;
-
     padding: 1rem 0;
-
     margin: 0;
 }
 
@@ -188,7 +183,9 @@ You can adjust the min-width numbers below, and add as many new media queries as
 /* Minimum width for iPads and tablets.  */
 @media all and (min-width: 481px) {
 	body{background-color: red;}
-	
+	.interview-figure{
+        max-width:25rem;
+    }
 	
 	
 } /* closes 481px+ */
@@ -208,7 +205,12 @@ You can adjust the min-width numbers below, and add as many new media queries as
 /* Minimum width for desktop screens. */
 @media all and (min-width: 1024px) {
 	body{background-color: orange;}
-	
+	#interview-section{
+        padding-top: 8rem;
+        padding-bottom: 8rem;
+        flex-direction: row;
+        justify-content: space-evenly;
+    }
 	
 	
 } /* closes 1024px+ */
