--- a/portfolio/final-project/css/style.css
+++ b/portfolio/final-project/css/style.css
@@ -36,6 +36,43 @@ header{
 
     background-color: darkgray;
 }
+/* Navigation CSS */
+nav{
+    position: sticky;
+    top: 1rem;
+
+    max-width: 10rem;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+}
+nav img{
+    max-width: 50%;
+    margin: 0;
+}
+#nav-box{
+    background-color: slategray;
+    
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+}
+#nav-box a{
+    margin: 1rem auto;
+
+    max-width: 80%;
+    width: 100%;
+
+    text-decoration: none;
+    text-align: center;
+    background-color: gainsboro;
+    border: 0.5rem solid darkgray;
+}
+#nav-box a:hover{
+    background-color: darkgray;
+    border: 0.5rem solid gainsboro;
+}
+
 /* Parallax Image CSS */
 .parallax-img{
     border-top: solid 2rem gray;
