--- a/portfolio/final-project/interview-1/css/style.css
+++ b/portfolio/final-project/interview-1/css/style.css
@@ -28,7 +28,6 @@ body {
 
 header{
     max-width: 100%;
-    width: 100%;
     padding: 3rem;
 	background-color: slategray;
 
@@ -39,7 +38,7 @@ header h1{
 }
 header h2{
     font-size: 1.5rem;
-    font-weight: 5  00;
+    font-weight: 500;
 }
 footer{
     background-color: slategrey;
