--- a/portfolio/final-project/interview-2/css/style.css
+++ b/portfolio/final-project/interview-2/css/style.css
@@ -33,11 +33,11 @@ header{
 
 }
 header h1{
-    font-size: 3rem;
+    font-size: 2.5rem;
     font-weight: 2500;
 }
 header h2{
-    font-size: 1.5rem;
+    font-size: 1.25rem;
     font-weight: 500;
 }
 footer{
@@ -200,6 +200,12 @@ You can adjust the min-width numbers below, and add as many new media queries as
 
 /* Minimum width for iPads and tablets.  */
 @media all and (min-width: 481px) {
+    header h1{
+        font-size: 3rem;
+    }
+    header h2{
+        font-size: 1.5rem;
+    }
     .question-section{
         flex-direction: column;
     }
