--- a/portfolio/final-project/css/style.css
+++ b/portfolio/final-project/css/style.css
@@ -138,7 +138,7 @@ nav img{
     font-size: 3rem;
     background-color: darkgray;
     border-bottom: solid gray 2rem;
-    width: 100%;
+    max-width: 100%;
     padding: 3rem;
     margin: 0;
     text-align: center;
