--- a/portfolio/final-project/interview-2/css/style.css
+++ b/portfolio/final-project/interview-2/css/style.css
@@ -11,10 +11,59 @@ html {
     line-height: 1.4em;
 }
 
-
+*{
+    scroll-behavior: smooth;
+    scroll-padding: 5rem;
+}
 
 
 /* Mobile First CSS: we'll design for phone sizes first, then add media queries for tablets and desktop computers later */
+* Navigation CSS */
+#navigation-div{
+    font-size: 2rem;
+}
+nav{
+    position: sticky;
+    top: 0;
+
+    margin: 0;
+
+    height: 0;
+
+    max-width: 10rem;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+}
+nav img{
+    position: relative;
+    max-width: 50%;
+    margin: 0;
+}
+#nav-box{
+    position: relative;
+    background-color: slategray;
+    border: solid 0.5rem black;
+    
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+}
+#nav-box a{
+    margin: 1rem auto;
+
+    max-width: 80%;
+    width: 100%;
+
+    text-decoration: none;
+    text-align: center;
+    background-color: gainsboro;
+    border: 0.5rem solid darkgray;
+}
+#nav-box a:hover{
+    background-color: darkgray;
+    border: 0.5rem solid gainsboro;
+}
 
 body {
     background: url(../img/optimo-background.png) repeat fixed center;
