--- a/portfolio/final-project/interview-1/css/style.css
+++ b/portfolio/final-project/interview-1/css/style.css
@@ -29,7 +29,7 @@ body {
     font-size: 2rem;
 }
 nav{
-    position: sticky;
+    position: fixed;
     top: 0;
 
     margin: 0;
@@ -48,7 +48,7 @@ nav img{
 }
 #nav-box{
     position: relative;
-    background-color: slategray;
+    background-color: gray;
     border: solid 0.5rem black;
     
     margin: 0;
