--- a/portfolio/final-project/css/style.css
+++ b/portfolio/final-project/css/style.css
@@ -127,14 +127,15 @@ nav img{
     
     padding: 0.5rem;
 }
-#intro-section p{
+#intro-section p, #conclusion-section p{
+    max-width: 80%;
     text-align: center;
-    margin: 0;
+    margin: 0 auto;
 }
-#intro-section :first-child{
+#intro-section :first-child, #conclusion-section :first-child{
     margin-top: 3rem;
 }
-#intro-section :last-child{
+#intro-section :last-child, #conclusion-section :last-child{
     margin-bottom: 3rem;
 }
 
