--- a/portfolio/final-project/interview-1/css/style.css
+++ b/portfolio/final-project/interview-1/css/style.css
@@ -36,15 +36,14 @@ nav{
 
     height: 0;
 
-    max-width: 10rem;
-    width: 100%;
     display: flex;
     flex-direction: column;
 }
+
 nav img{
     position: relative;
-    max-width: 50%;
     margin: 0;
+    width: 5rem;
 }
 #nav-box{
     position: relative;
@@ -56,16 +55,25 @@ nav img{
     flex-direction: column;
 }
 #nav-box a{
-    margin: 1rem auto;
+    margin: 0 auto;
 
     max-width: 80%;
     width: 100%;
+
+    color: black;
 
     text-decoration: none;
     text-align: center;
     background-color: gainsboro;
     border: 0.5rem solid darkgray;
 }
+#nav-box :first-child{
+    margin-top: 1rem;
+}
+#nav-box :last-child{
+    margin-bottom: 1rem;
+}
+
 #nav-box a:hover{
     background-color: darkgray;
     border: 0.5rem solid gainsboro;
@@ -287,6 +295,10 @@ You can adjust the min-width numbers below, and add as many new media queries as
 
 /* Minimum width for laptops. */
 @media all and (min-width: 769px) {
+    #nav-box a{
+        margin: 0.5rem auto;
+    }
+
 	.question-section{
         flex-direction: column;
     }
