--- a/portfolio/final-project/interview-3/css/style.css
+++ b/portfolio/final-project/interview-3/css/style.css
@@ -25,19 +25,14 @@ html {
 nav{
     position: fixed;
     top: 0;
-
     margin: 0;
-
     height: 0;
-
-    max-width: 10rem;
-    width: 100%;
     display: flex;
     flex-direction: column;
 }
 nav img{
     position: relative;
-    max-width: 50%;
+    width: 5rem;
     margin: 0;
 }
 #nav-box{
@@ -50,15 +45,23 @@ nav img{
     flex-direction: column;
 }
 #nav-box a{
-    margin: 1rem auto;
+    margin: 0 auto;
 
     max-width: 80%;
     width: 100%;
+
+    color: black;
 
     text-decoration: none;
     text-align: center;
     background-color: gainsboro;
     border: 0.5rem solid darkgray;
+}
+#nav-box :first-child{
+    margin-top: 1rem;
+}
+#nav-box :last-child{
+    margin-bottom: 1rem;
 }
 #nav-box a:hover{
     background-color: darkgray;
@@ -287,6 +290,9 @@ You can adjust the min-width numbers below, and add as many new media queries as
 
 /* Minimum width for laptops. */
 @media all and (min-width: 769px) {
+    #nav-box a{
+        margin: 0.5rem auto;
+    }
 	.question-section{
         flex-direction: column;
     }
