--- a/portfolio/final-project/interview-1/css/style.css
+++ b/portfolio/final-project/interview-1/css/style.css
@@ -1,3 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Pacifico&family=Righteous&display=swap');
+/*
+font-family: 'Alfa Slab One', cursive; //Title
+font-family: 'Pacifico', cursive; // Font
+font-family: 'Righteous', cursive; // Sub Title
+*/
+
+
 /* Basic CSS resets -- leveling slight inconsistencies in browsers */
 html, body {
 	margin:0px;
@@ -90,10 +98,12 @@ header{
 
 }
 header h1{
+    font-family: 'Righteous', cursive;
     font-size: 1.75rem;
     font-weight: 2500;
 }
 header h2{
+    font-family: 'Pacifico', cursive;
     font-size: 1.25rem;
     font-weight: 500;
 }
@@ -166,17 +176,19 @@ hr {
     border: solid black 1rem;
 }
 .question-section h3{
+    font-family: 'Righteous', cursive;
+
     background-color: gainsboro;
     margin: 0;
     padding: 3rem;
-    font-size: 2rem;
+    font-size: 1rem;
     font-weight: bolder;
-    line-height: 4rem;
+    line-height: 2rem;
     border-bottom: 0.5rem solid black;
 }
 .question-section .statement{
     font-style: normal;
-    font-size: 1.5rem;
+    font-size: 1rem;
 
     line-height: normal;
 }
@@ -192,8 +204,6 @@ hr {
     max-width: 100%;
     width: 100%;
 
-    
-
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -203,7 +213,6 @@ hr {
     background-color: gray;
 
     border-bottom: 0.5rem solid black;
-
 }
 .question-section figcaption{
     font-size: 1.5rem;
@@ -218,6 +227,8 @@ hr {
     justify-content: center;
 }
 .question-section figcaption p{
+    font-family: 'Pacifico', cursive;
+
     background-color: darkgray;
 
 }
@@ -240,6 +251,7 @@ hr {
     background-color: gainsboro;
 }
 .p-container :nth-child(1) em{
+    font-family: 'Pacifico', cursive;
     font-size: 4rem;
     padding: 0rem 0rem;
     margin: 0;
@@ -295,6 +307,13 @@ You can adjust the min-width numbers below, and add as many new media queries as
 
 /* Minimum width for laptops. */
 @media all and (min-width: 769px) {
+    .question-section h3{
+        font-size: 2rem;
+        line-height: 4rem;
+    }
+    .question-section .statement{
+        font-size: 1.5rem;
+    }
     #nav-box a{
         margin: 0.5rem auto;
     }
